# cgf

./: README.md  pyproject.toml  requirements.txt
.github/.workflows/: testing.yml
.github/workflows/: testing.yml
cgf/: baff.py  bnff.py  cgatoms.py  cycles.py  geometry_utils.py  motifs.py  redecorate.py  surrogate.py  surrogate_ref.py  training_utils.py  utils.py
cgf/models/: baff.py  bnff.py  surrogate.py  surrogate_ref.py
cgf/utils/: cycles.py  defects.py  geometry.py  motifs.py  numeric_stress.py  plot.py  redecorate.py  training.py
examples/: README.md
examples/example1/: all_training_results_MikadoRR.json  id_groups_cores.json  training_model_BAFF.json  traj_training.traj
examples/example2/: cg_atoms_MikadoRR.json
examples/example3/: example3.ipynb  redecorated_linkermol.cif
notebooks/: BAFF-Elastic-Example.ipynb  BNFF-Elastic-Example.ipynb  Redecorating-Example.ipynb  Surrogate-Example.ipynb  cgf-Defect.ipynb  cgf-Redecorating.ipynb  cgf-Surrogate.ipynb
scripts/: 585opt.traj  SW_concentration.py  bench.stats  defect-585.py  defect-sw.py  mikado_benchmark.py  testopt.py  training.py
test-data/: 5-8-5_carbon.gen  COF-5_585_opt.gen  COF-5_585_opt_cg.json  COF-5_opt_SW.gen  COF-5_opt_SW_cg.json  COF-5_opt_SW_cg.pkl  Star_COF_1phenyl_SW_opt.gen  TpDB_COF_1phenyl_SW_BNFF.xyz  Tp_lc2_1Phenyl_opt_SW.gen  cycles.data  testopt.py
test-data/Triphenylene-DB_1phenyl/: results_bulk.txt  results_shear.txt
testing/: test_baff.py  test_cgatoms.py  test_surrogate.py  test_training.py
trainings/: README.md  do_all_trainings.sh  train.py
(+268 files in other folders)
